--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <header class="Menu">
         <div>
-            <svg class="Account" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
-            <h1>Joao Victor .C .L</h1>
-            <p>Programador Web e Game Developer</p>
+            <a class="Account" href="https://github.com/">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                <h1>Joao Victor .C .L</h1>
+                <p>Programador Web e Game Developer</p>
+            </a>
             <ul>
                 <li>
                     <a href="https://youtube.com/">
@@ -50,13 +52,13 @@
                    </a>
                 </li>
                 <li>
-                    <a href="JS">
+                    <a href="#JS">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3,3H21V21H3V3M7.73,18.04C8.13,18.89 8.92,19.59 10.27,19.59C11.77,19.59 12.8,18.79 12.8,17.04V11.26H11.1V17C11.1,17.86 10.75,18.08 10.2,18.08C9.62,18.08 9.38,17.68 9.11,17.21L7.73,18.04M13.71,17.86C14.21,18.84 15.22,19.59 16.8,19.59C18.4,19.59 19.6,18.76 19.6,17.23C19.6,15.82 18.79,15.19 17.35,14.57L16.93,14.39C16.2,14.08 15.89,13.87 15.89,13.37C15.89,12.96 16.2,12.64 16.7,12.64C17.18,12.64 17.5,12.85 17.79,13.37L19.1,12.5C18.55,11.54 17.77,11.17 16.7,11.17C15.19,11.17 14.22,12.13 14.22,13.4C14.22,14.78 15.03,15.43 16.25,15.95L16.67,16.13C17.45,16.47 17.91,16.68 17.91,17.26C17.91,17.74 17.46,18.09 16.76,18.09C15.93,18.09 15.45,17.66 15.09,17.06L13.71,17.86Z" /></svg>
                         JS
                     </a>
                 </li>
                 <li>
-                    <a href="CSS">
+                    <a href="#CSS">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5,3L4.35,6.34H17.94L17.5,8.5H3.92L3.26,11.83H16.85L16.09,15.64L10.61,17.45L5.86,15.64L6.19,14H2.85L2.06,18L9.91,21L18.96,18L20.16,11.97L20.4,10.76L21.94,3H5Z" /></svg>
                         CSS
                     </a>
@@ -64,6 +66,164 @@
             </ul>
         </div>
     </aside>
+    <section class="Posts">
+        <div id="Home" class="HTML">
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post1.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 1</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post2.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 2</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post3.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 3</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post4.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 4</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post5.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 5</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+        </div>
+        <div id="JS" class="JavaScript">
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post1.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 1</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post2.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 2</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post3.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 3</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post4.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 4</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post5.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 5</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+        </div>
+        <div id="CSS" class="CSS">
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post1.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 1</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post2.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 2</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post3.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 3</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post4.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 4</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+            <div id="HtmlPB" class="HtmlPB">
+                <a href="C:\Users\WINDOWS\Documents\VsCodePastas\Na Pratica sem CURSO\BlogNote\BlogPoint\Post5.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3V21H21V3H3M18 18H6V17H18V18M18 16H6V15H18V16M18 12H6V6H18V12Z" /></svg>
+                    <ul>
+                        <li><p>Date:--/--/--</p></li>
+                        <li><h2>TITLE 5</h2></li>
+                        <li><p>DESC.DESC.DESC.DESC.DESC.DESC.DESC.</p></li>
+                    </ul>
+                </a>
+            </div>
+        </div>
+    </section>
     <script src="Assets/Command.js"></script>
 </body>
 </html>
